--- a/index.html
+++ b/index.html
@@ -157,9 +157,11 @@
                         <div class="center-me animateme" data-when="exit" data-from="0" data-to="0.6" data-opacity="0" data-translatey="100">
                             <div>
                                 <h2>We build digital products that <span>empower</span> businesses to succeed.</h2>
+                                <a href="company.html" class="ghost-button animsition-link" title="Learn More">Learn More</a>
                             </div>
                         </div>
                         <!-- // .center-me .text-center -->
+                        <span class="mouse-icon"><span><span></span></span></span>
                     </div>
                     <!-- // .col-md-12 -->
                 </div>
@@ -176,9 +178,11 @@
                         <div class="center-me animateme" data-when="exit" data-from="0" data-to="0.6" data-opacity="0" data-translatey="100">
                             <div>
                                 <h2>We build digital products that <span>empower</span> businesses to succeed.</h2>
+                                <a href="company.html" class="ghost-button animsition-link" title="Learn More">Learn More</a>
                             </div>
                         </div>
                         <!-- // .center-me .text-center -->
+                        <span class="mouse-icon"><span><span></span></span></span>
                     </div>
                     <!-- // .col-md-12 -->
                 </div>
@@ -198,14 +202,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 opening-statement">
-                        <div class="col-md-4">
-                            <h3>Digital services that <span>engage</span> users and <span>empower</span> businesses.</h3>
-                        </div>
-                        <div class="col-md-8">
-                            <p>From mobile apps and websites to enterprise-grade systems, we apply our expertise across platforms and screens. We offer a full range of digital creative services for brands, startups, corporations and foundations looking to improve their digital outlook.</p>
-                        </div>
-                        <div class="clearfix"></div>
-             
+                        <h3>Digital services that <span>engage</span> users and <span>empower</span> businesses.</h3>
+                        <p>From mobile apps and websites to enterprise-grade systems, we apply our expertise across platforms and screens. We offer a full range of digital creative services for brands, startups, corporations and foundations looking to improve their digital outlook.</p>
+                       
                     </div>
                 </div>
             </div>
@@ -241,7 +240,7 @@
                 </div>
                 <!-- CALL TO ACTION -->
                 <div class="figures-footer text-center">
-                    <h6><a href="company.html" class="strong animsition-link">Read more about our services »</a></h6>
+                    <h6><a href="services.html" class="strong animsition-link">Read more about our services »</a></h6>
                 </div>
             </div>
         </section>
