Added Team Page

--- a/company.html
+++ b/company.html
@@ -168,11 +168,12 @@
                 <!-- ============================ Page tabs =========================== -->
 
                 <div class="row">
-                    <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+                    <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                         <ul class="row page-nav">
-                            <li class="col-xs-6 col-sm-4 col-md-4 col-lg-4 active"><a href="company.html" class="animsition-link" title="Company"><i class="icon-basic-book-pencil"></i>Company</a></li>
-                            <li class="col-xs-6 col-sm-4 col-md-4 col-lg-4"><a href="services.html" class="animsition-link" title="Values"><i class="icon-basic-settings"></i>Services</a></li>
-                            <li class="col-xs-6 col-sm-4 col-md-4 col-lg-4"><a href="careers.html" class="animsition-link" title="Careers"><i class="icon-basic-globe"></i>Careers <span class="badge jobs">1</span></a></li>
+                            <li class="col-xs-6 col-sm-3 col-md-3 col-lg-3 active"><a href="company.html" class="animsition-link" title="Company"><i class="icon-basic-book-pencil"></i>Company</a></li>
+                            <li class="col-xs-6 col-sm-3 col-md-3 col-lg-3"><a href="services.html" class="animsition-link" title="Values"><i class="icon-basic-settings"></i>Services</a></li>
+                            <li class="col-xs-6 col-sm-3 col-md-3 col-lg-3"><a href="team.html" class="animsition-link" title="Team"><i class="icon-basic-life-buoy"></i>Team</a></li>
+                            <li class="col-xs-6 col-sm-3 col-md-3 col-lg-3"><a href="careers.html" class="animsition-link" title="Careers"><i class="icon-basic-globe"></i>Careers <span class="badge jobs">1</span></a></li>
                         </ul>
                     </div>
                 </div>
