Added Google Play badge and link to Life List app.

--- a/life-list.html
+++ b/life-list.html
@@ -173,7 +173,7 @@
                             <H3>Overview</H3>
                             <p>With Life List app, we set out to make an easy and engaging bucket list app. The app will let you easily sign up and create bucket list items. If you feel you need to change them, we built in an Edit functionality. Then once you’ve accomplished your goal, you can mark that item as complete! And if you want to reminisce on those old times, you can look at your Completed list.</p>
 
-<p>The front end of the app was built using AngularJS and the Ionic Framework. This allowed for fully responsive design, as we built a web app (<a href="http://todo.archiosoft.com/" target="_blank">http://todo.archiosoft.com/</a>), also, with the same functionality, that way you could use the app on any device. The backend was built using MongoDB as the database architecture running on MongoLab with RestifyJS as the API layer running on Node.js, leveraging Amazon Web Services for scalability and uptime. Since this was a hybrid app, we were able to use PhoneGap to package the app and submit to App Stores. You can download the Android version in the Google Play store.</p>
+<p>The front end of the app was built using AngularJS and the Ionic Framework. This allowed for fully responsive design, as we built a web app (<a href="http://todo.archiosoft.com/" target="_blank">http://todo.archiosoft.com/</a>), also, with the same functionality, that way you could use the app on any device. The backend was built using MongoDB as the database architecture running on MongoLab with RestifyJS as the API layer running on Node.js, leveraging Amazon Web Services for scalability and uptime. Since this was a hybrid app, we were able to use PhoneGap to package the app and submit to App Stores.<br /><br /> You can download the Android version now in the Google Play store, and the Apple version is coming soon!<br /><br /><a href="https://play.google.com/store/apps/details?id=com.BucketList.app&amp;hl=en" target="_blank"><img src="img/google-play-logo.png" /></a></p>
 		         <hr>
 		           <h3>Services</h3>
 		                   <ul class="services list-unstyled">
@@ -184,6 +184,7 @@
 							   <li><a href="https://nodejs.org/" target="_blank" title="Node.js">Node.js</a></li>
 							   <li><a href="http://aws.amazon.com/" target="_blank" title="Amazon Web Services">Amazon Web Services</a></li>
 							   <li><a href="http://phonegap.com/" target="_blank" title="PhoneGap">PhoneGap</a></li>
+                               <li><a href="http://mcavage.me/node-restify/" target="_blank" title="Restify">Restify</a></li>
 		                   </ul>
                         </div>
                     </div>
