Embedded the SK Connect Instructional Video

--- a/sk-connect.html
+++ b/sk-connect.html
@@ -174,6 +174,9 @@
                             <p>Our client, SK Nelson, is committed to exceptional surveying, engineering, materials testing, general contracting, site/utility construction and design-build services. They needed a project management webapp to allow them to manage their client’s projects, on time and on budget. DKM Labs built a fully responsive project management system called SK Connect. This system allowed for User Administration, Client Administration, project input/editing/completion, and task input/editing/completion, along with document and image upload capabilities per project. This has allowed SK Nelson’s clients to have further visibility into the projects and allows SK Nelson to be as transparent as possible, while both clients and SK Nelson employees can load important documents and images to a project, in real-time.</p>
                             <p>For SK Connect, we decided to use the full MEAN stack (MongoDB, Express, Angular, Node.js). The front end of the app was built using AngularJS and the Ionic Framework. This allowed for fully responsive design, which allowed SK Nelson and their clients to use the system on any device with any browser. The backend was built using MongoDB as the database architecture with Express as the API layer running on Node.js. The system in it’s entirety is being managed by Amazon Web Services for scalability and uptime.</p>
 		         <hr>
+                   <h3>Video</h3>
+                   <iframe width="560" height="315" src="https://www.youtube.com/embed/h24MIpKyBLE" frameborder="0" allowfullscreen></iframe>
+                 <hr>
 		           <h3>Services</h3>
 		                  
 		                   <ul class="services">
