--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 vertical-align cover boost text-center">
                         <div class="center-me animateme" data-when="exit" data-from="0" data-to="0.6" data-opacity="0" data-translatey="100">
                             <div>
-                                <h2>We build digital products that <span>empower</span> businesses to succeed.</h2>
+                                <h1>MACH 7 MEDIA: WE'RE IN THE BUSINESS OF MAKING A DIFFERENCE</h1>
                                 <a href="company.html" class="ghost-button animsition-link" title="Learn More">Learn More</a>
                             </div>
                         </div>
@@ -337,9 +337,9 @@
             $(document).ready(function() {
                 $("#videohero").wallpaper({
                     source: {
-                        mp4:    "video/hero.mp4",
-                        ogg:    "video/hero.ogv",
-                        webm:   "video/hero.webm"
+                        mp4:    "video/Home-page-loop.mp4",
+                        // ogg:    "video/hero.ogv",
+                        // webm:   "video/hero.webm"
                     }
                 });
             });
