Updated home page and aadded new logo

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="container">
                     <!-- Nav logo -->
                     <div class="logo">
-                        <a href="index.html" title="DKM" class="animsition-link"><img src="img/global/logo.svg" alt="DKM logo"></a>
+                        <a href="index.html" title="Mach 7 Media" class="animsition-link"><img src="img/global/mach7logo.png" alt="Mach Seven Media"></a>
                     </div>
                     <!-- // Nav logo -->
                 </div>
@@ -202,9 +202,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 opening-statement">
-                        <h3>Digital services that <span>engage</span> users and <span>empower</span> businesses.</h3>
-                        <p>From mobile apps and websites to enterprise-grade systems, we apply our expertise across platforms and screens. We offer a full range of digital creative services for brands, startups, corporations and foundations looking to improve their digital outlook.</p>
-                       
+                        <h2>Digital Experiences Strategically Engineered to Perform.</h2>
+                        <h4>We are a creative digital agency focused on growing brands online and we believe that if we make a difference for your customer, we’ll make a difference for your business, too. From digital design, to AI and emerging technologies, we live on the cutting edge of technology and marketing and provide 360° solutions, delivering measurable results.</h4>
                     </div>
                 </div>
             </div>
