--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
 
     <!-- Page Title, (write properly for SEO) -->
-    <title>DKM - App development, design and strategy for the web, iOS and Android</title>
+    <title>Mach Seven Media - WEBSITE DESIGN, BRAND STRATEGY & DIGITAL MARKETING With Stunning Results</title>
 
     <!-- Meta viewport & behaviour -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -297,7 +297,7 @@
                 <div class="footer_top">
                     <div class="copy">
                         <p>
-                            &copy; 2014<script>new Date().getFullYear()>2014&&document.write("-"+new Date().getFullYear());</script>, DKM. All Rights Reserved.
+                            &copy; <script>document.write(new Date().getFullYear());</script>, Mach Seven Media. All Rights Reserved.
                         </p>
                     </div>
                     <div class="clearfix"> </div>
