Several content and image updates throughout the site

--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Meta data -->
-    <meta name="author" content="DKM Labs">
-    <meta name="description" content="DKM Labs - App development, design and strategy for the web, iOS and Android. We build digital products that empower businesses to succeed.">
-    <meta name="keywords" content="digital products, mobile apps, responsive websites, digital agency, houston, iOS, android, drupal, node.js, angularjs, mysql, mongodb" />
+    <meta name="author" content="Mach Seven Media">
+    <meta name="description" content="Mach Seven Media - Digital Experiences Strategically Engineered to Perform">
+    <meta name="keywords" content="digital products, seo, digital marketing, chat bots, artificial intelligence, AI, mobile apps, responsive websites, digital agency, houston, iOS, android, drupal, node.js, angularjs, mysql, mongodb" />
 
     <!-- Favicon, (keep icon in root folder) -->
     <link rel="Shortcut Icon" href="/favicon.ico" type="image/ico">
 
     <!-- Open graph meta data, (Facebook) -->
     <meta property="og:description" content="We build digital products that empower businesses to succeed.">
-    <meta property="og:image" content="http://dkmlabs.com/img/home/19.jpg">
-    <meta property="og:site_name" content="DKM Labs">
-    <meta property="og:title" content="DKM Labs - App development, design and strategy for the web, iOS and Android">
+    <meta property="og:image" content="img/home/18.jpg">
+    <meta property="og:site_name" content="Mach Seven Media">
+    <meta property="og:title" content="Mach Seven Media - Digital Experiences Strategically Engineered to Perform">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://www.dkmlabs.com">
+    <meta property="og:url" content="http://www.machsevenmedia.com">
 
     <!-- Meta card data, (Twitter) -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@dkmlabs">
-    <meta name="twitter:creator" content="@dkmlabs">
-    <meta name="twitter:title" content="DKM Labs - App development, design and strategy for the web, iOS and Android">
+    <meta name="twitter:site" content="@mach7med">
+    <meta name="twitter:creator" content="@mach7med">
+    <meta name="twitter:title" content="Mach Seven Media - Digital Experiences Strategically Engineered to Perform">
     <meta name="twitter:description" content="We build digital products that empower businesses to succeed.">
-    <meta name="twitter:image" content="http://dkmlabs.com/img/global/logo.svg">
+    <meta name="twitter:image" content="/img/global/mach7logo.png">
 
     <!-- Apple touch icons, (keep icons in root folder) -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
@@ -252,7 +252,7 @@
         <section id="statement">
             <div class="container text-center wow fadeInUp" data-wow-delay="0.5s">
                 <div class="row">
-                    <p><i class="icon-basic-settings"></i> We build usable interfaces and products for businesses that want better quality.</p>
+                    <p><i class="icon-basic-settings"></i>We craft engaging digital experiences and integrated campaigns that are built on strategy and driven by data.</p>
                 </div>
             </div>
         </section>
@@ -262,7 +262,7 @@
         <!-- ============================ Full-width image =========================== -->
 
         <section id="fullwidth-img">
-            <div class="container-fluid element-img wow fadeInUp" data-wow-delay="0.5s" style="background-image:url(img/home/19.jpg)"></div>
+            <div class="container-fluid element-img wow fadeInUp" data-wow-delay="0.5s" style="background-image:url(img/home/18.jpg)"></div>
         </section>
 
         <!-- ============================ END Full-width image =========================== -->
@@ -346,7 +346,7 @@
 
     </div>
     <!-- ============================ END #sb-site Main Page Wrapper =========================== -->
-<script>
+<!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -355,6 +355,6 @@
   ga('create', 'UA-57371323-1', 'auto');
   ga('send', 'pageview');
 
-</script>
+</script> -->
 </body>
 </html>
