Updated careers page.

--- a/careers.html
+++ b/careers.html
@@ -298,13 +298,13 @@
                             <div class="col-sm-6 col-md-6 col-lg-6 wow fadeInRight" data-wow-delay="0.4s">
                                 <div class="apply">
                                     <h4>Think you&#39;ve got what it takes?</h4>
-                                    <h5><a href="contact.html" class="animsition-link" title="Apply Today">apply today</a></h5>
+                                    <h3><a href="contact.html" title="Apply Today">Apply today</a></h3>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-12 apply-meta">
-                            <p>Head on over to our <a href="contact.html" class="animsition-link" title="Contact" style="color:#fff;text-decoration:underline">contact</a> page and send us an email to introduce yourself.</p>
-                            <p>Need to send a resume? No problem. Please send your work history across to <span style="color:#fff;text-decoration:underline">contact@machsevenmedia.com</span>, making sure you include a covering letter.</p>
+                            <p>Head on over to our <a href="contact.html" title="Contact" style="text-decoration:underline">contact</a> page and send us an email to introduce yourself.</p>
+                            <p>Need to send a resume? No problem. Please send your work history across to <span style="text-decoration:underline"><a href="mailto:contact@machsevenmedia.com">contact@machsevenmedia.com</a></span>, making sure you include a covering letter.</p>
                         </div>
 
                    </div>
