--- a/proposal.html
+++ b/proposal.html
@@ -252,7 +252,7 @@
                             </div>
                             <div id="success"> </div>
                             <!-- For success/fail notifications upon clicking 'Send' -->
-                            <button type="submit" class="btn btn-default pull-right send">Send</button>
+                            <!-- <button type="submit" class="btn btn-default pull-right send">Send</button>
                         </form> -->
                         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfjyeZFGhGab9l6OUeMUjoDBOT8LoZhAe9Y4SIDihI5Rq6DIw/viewform?embedded=true"
                             width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
