Added Google Map embed

--- a/contact.html
+++ b/contact.html
@@ -197,22 +197,24 @@
                     <div class="col-md-4 offices">
                         <h4>Our <span>Houston</span> Office</h4>
                         <ul>
-                            <li><i class="icon-basic-geolocalize-05"></i> 3723 Great Timbers Ln</li>
+                            <li><i class="icon-basic-geolocalize-05"></i>3723 Great Timbers Ln</li>
                             <li>Spring, Texas</li>
                             <li>77386</li>
                             <li>USA</li>
                         </ul>
                         <ul>
                             <li><i class="icon-basic-headset"></i> Phone:(281) 796-5257</li>
-                            <li><i class="icon-basic-mail"></i> contact@machsevenmedia.com</li>
+                            <li><i class="icon-basic-mail"></i><a href="mailto:contact@machsevenmedia.com">contact@machsevenmedia.com</a></li>
                         </ul>
                     </div>
                     <div class="col-md-8">
                         <!-- Map -->
-                        <section id="googlemap" class="map noMargin container">
+                        <!-- <section id="googlemap" class="map noMargin container">
                             <div id="map-canvas"></div>
                             <div class="map-cover"><img src="img/contact/touch-gesture.png" alt="Reveal Map"></div>
-                        </section>
+                        </section> -->
+                        <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ-SmDPfZJR4YRFCZRc7wlseM&key= AIzaSyDBFvsyAiQTwmpvQ1z0Ng3XX6KnL_MiNco"
+                            allowfullscreen></iframe>
                         <!--// Map-->
                     </div>
                     <div class="col-md-12">
