Updated twitter link

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <!-- Meta card data, (Twitter) -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@mach7med">
-    <meta name="twitter:creator" content="@mach7med">
+    <meta name="twitter:site" content="@machsevenmedia">
+    <meta name="twitter:creator" content="@machsevenmedia">
     <meta name="twitter:title" content="Mach Seven Media - Digital Experiences Strategically Engineered to Perform">
     <meta name="twitter:description" content="We build digital products that empower businesses to succeed.">
     <meta name="twitter:image" content="/img/global/mach7logo.png">
