--- a/careers.html
+++ b/careers.html
@@ -233,7 +233,7 @@
                             <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9 wow fadeInRight" data-wow-delay="0.3s">
                                 <p>Mach Seven Media is a digital development studio devoted to crafting meaningful experiences in digital products. We are led by our desire to build solutions that empower business to succeed.</p>
                                 
-<p>We are a tech startup looking for an ambitious and tech-savvy Contract Account Executive to join our sales team. As an Account Executive, you will demonstrate to prospects how M7M delivers the right digital solutions and services for every area of their organization.  We are currently seeking a motivated, high-energy sales professional to focus on new account development and management in the the Houston area, communicating our application and web strategy to existing and potential clients.</p>
+<p>We are a marketing and tech startup looking for an ambitious and tech-savvy Contract Account Executive to join our sales team. As an Account Executive, you will demonstrate to prospects how M7M delivers the right digital solutions and services for every area of their organization.  We are currently seeking a motivated, high-energy sales professional to focus on new account development and management in the the Houston area, communicating our application and web strategy to existing and potential clients.</p>
                                 <!-- PANEL START -->
                                 <div class="panel">
                                     <div class="panel-heading">
