Updated careers and team page

--- a/team.html
+++ b/team.html
@@ -217,9 +217,9 @@
                                 <img src="img/team/mark_headshot.jpg" class="img-responsive" alt="Staff Member" />
                             </div>
                             <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
-                                <h3>Mark Chiles <a class="small" href="http://twitter.com/mecarc" target="_blank" title="Twitter">@mecarc</a></h3>
+                                <h3>Mark Chiles <a class="small" href="http://twitter.com/markechiles" target="_blank" title="Twitter">@markechiles</a></h3>
                                 <h5>CEO &amp; Founder</h5>
-                                <p>Mark E. Chiles is the CEO/Co-Founder for Archiosoft, Inc., Chief Technology Officer for Hart Energy, and Technology Startup Advisor for Gennex Group, Inc. He’s a technology executive with 14 years of progressive expertise in technology planning, implementation, product development and business operations. In these roles, Chiles has been responsible for the overall technology vision, driving software engineering initiatives and collaboration, while managing the Global Information Technology organization for infrastructure and architecture for hundreds of users, with millions of visitors to the digital properties and apps that he oversees.</p>
+                                <p>Mark E. Chiles is the CEO/Co-Founder for Archiosoft, Inc., Chief Digital Officer for Hart Energy, and Technology Startup Advisor for Gennex Group, Inc. He’s a technology executive with 17 years of progressive expertise in technology planning, implementation, product development and business operations. In these roles, Chiles has been responsible for the overall technology vision, driving software engineering initiatives and collaboration, while managing the Global Information Technology organization for infrastructure and architecture for hundreds of users, with millions of visitors to the digital properties and apps that he oversees.</p>
                             </div>
                             <!-- // .col-xs-12 .col-sm-9 .col-md-9 .col-lg-9 -->
                             <div class="clearfix"></div>
