--- a/proposal.html
+++ b/proposal.html
@@ -189,22 +189,14 @@
                     <div class="titleblock text-center">
                         <i class="icon-basic-laptop"></i>
                         <h2>Outline Your Project</h2>
-                        <p>If you have an idea you need built, then simply fill out the proposal form below and someone from our sales team will call you back soon to discuss the project.</p>
-                    </div>
-                    <div class="col-md-12">
-                        <hr>
-                    </div>
-                    <div class="col-md-4 message-us">
-                        <h4>Things to <span>remember:</span></h4>
-                        <ul>
-                            <li>Be accurate about your project</li>
-                            <li>Think about your budget</li>
-                            <li>Be certain of when you want to launch</li>
-                            <li>Understand your audience</li>
-                        </ul>
-                        <ul>
-                            <li>Rather just make a general enquiry? <a href="contact.html" class="animsition-link" title="Vacancies">Click here</a> to visit our &#39;Contact Us&#39; page.</li>
-                        </ul>
+                        <p>If you have an idea you need built, then simply click the <strong>Start</strong> button below fill out the proposal form and someone from our sales team will call you back soon to discuss the project.</p>
+                        <div class="typeform-widget" data-url="https://mark1060.typeform.com/to/WhjwPl" data-transparency="50" data-hide-headers=true
+                            data-hide-footer=true style="width: 100%; height: 500px;"> </div>
+                        <script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() </script>
+                        <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by
+                            <a href="https://www.typeform.com//?utm_campaign=WhjwPl&amp;utm_source=typeform.com-11233981-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-poweredbytypeform&amp;utm_term=EN"
+                                style="color: #999" target="_blank">Typeform</a>
+                        </div>
                     </div>
                     <div class="col-md-8 emailform">
                         <!-- <form name="sentMessage" class="well" id="contactForm"  novalidate>
@@ -254,8 +246,9 @@
                             <!-- For success/fail notifications upon clicking 'Send' -->
                             <!-- <button type="submit" class="btn btn-default pull-right send">Send</button>
                         </form> -->
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfjyeZFGhGab9l6OUeMUjoDBOT8LoZhAe9Y4SIDihI5Rq6DIw/viewform?embedded=true"
-                            width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                        <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfjyeZFGhGab9l6OUeMUjoDBOT8LoZhAe9Y4SIDihI5Rq6DIw/viewform?embedded=true"
+                            width="760" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe> -->
+                        
                     </div>
                     <div class="col-md-12">
                         <hr>
