--- a/proposal.html
+++ b/proposal.html
@@ -189,7 +189,7 @@
                     <div class="titleblock text-center">
                         <i class="icon-basic-laptop"></i>
                         <h2>Outline Your Project</h2>
-                        <p>If you have an idea you need built, then simply click the <strong>Start</strong> button below fill out the proposal form and someone from our sales team will call you back soon to discuss the project.</p>
+                        <p>If you have an idea you need built, then simply click the <strong>Start</strong> button below to fill out the proposal form and someone from our sales team will call you back soon to discuss the project.</p>
                         <div class="typeform-widget" data-url="https://mark1060.typeform.com/to/WhjwPl" data-transparency="50" data-hide-headers=true
                             data-hide-footer=true style="width: 100%; height: 500px;"> </div>
                         <script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() </script>
